# ytllm

./: .gitignore  FINETUNING.md  GUTENBERG.md  LICENSE  README.md  animation.py  chapterize.py  config.txt  data.py  gutenberg.py  gutenberg_utils.py  hyperbolic.md  mixed_tokenizer.py  pyproject.toml  requirements-full.txt  requirements.txt  tokenizer.py  upload_to_hf.py
data/: sample.jsonl
data/resources/: auteurs-fr.txt  dumas.txt  hugo.txt
fr_mixed_tokenizer/: gabgpt-merges.txt  gabgpt-metadata.json  gabgpt-vocab.json
frllm/: book.py  gutenberg.py  model.py  train.py  util.py
gabgpt/: dataloader.py  infer.py  inference.py  model.py  multigpu_train.py  qwen3_model.py  sft_dataset.py  sft_train.py  stats_training.py  tokenizer.py  train.py  util.py
gabgpt/old/: infer.py  model_gpt.py  multigpu_train.py  nano_train.py  train_gpt.py
scripts/: authors.py  bookid.py  dataset_stats.py  ebooks.py  explore_news_dataset.py  model_sizing.py  test_news_dataset.py  transfer_tokens.py
tests/: README.md  test_dataloader.py
training/20250706/: config.txt
video/: build-a-llm-for-10-bucks.md  deep-dive-llm.md  visualization.py
