[project]
name = "ytllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chardet>=5.2.0",
    "datasets>=3.6.0",
    "ebooklib>=0.19",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformer-engine>=2.4.0",
]
